--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,11 @@
 /* Empty. Add your own CSS if you like */
+.tabs-positive > .tabs{
+  background-color: #ef473a;
+  border: #ef473a;
+  border-top: none;
+}
+
+.bar.bar-positive {
+  background-color: #ef473a;
+  border: #ef473a;
+}
