adds refresh icon and rest images

--- a/www/css/nearby.css
+++ b/www/css/nearby.css
@@ -3,16 +3,12 @@
   display: flex;
 }
 
+.nearby-item .col-15 {
+
+}
+
 .top-address {
   margin-bottom: -5px;
-}
-
-.grey-background {
-  background-color: #EEEEEE;
-}
-
-.white-background {
-  background-color: #FFFFFF
 }
 
 .restaurant-name {
@@ -21,7 +17,7 @@
 
 .nearby-item button {
   border-radius: 0;
-  padding: 11px 0;
+  padding: 16px 0;
   width: 100%;
 }
 
@@ -33,4 +29,14 @@
   -ms-flex: 0 0 55%;
   flex: 0 0 55%;
   max-width: 55%;
+}
+
+.reload {
+  font-size: 35px;
+  position: absolute;
+  right: 30px;
+}
+
+.results {
+  padding-top: 30px;
 }
